changes to div layout to fix potential site rendering issues and game window cutoff

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ h1, h2, h3 {
     position: top;
     flex: 0 0 70%;
     min-height: 90vh;
+    height: fit-content;
     background: #4d4d4d;
     color: #ffffff;
     border-top-left-radius: 32px;
@@ -95,7 +96,10 @@ h1, h2, h3 {
     color: #000;
 }
 .gamecontainer-div {
-    margin: auto;
+    margin-top: auto;
+    margin-bottom: 12vh;
+    margin-left: auto;
+    margin-right: auto;
     width: 65vw;
     height: 50vh;
 }
